split Type hierarchy into hierarchy of smooth types and hierarchy of binary types (stored on disk)