@@ -3,6 +3,12 @@ package org.smoothbuild.lang.base;
 import static com.google.common.truth.Truth.assertThat;
 import static org.smoothbuild.lang.base.Location.commandLineLocation;
 import static org.smoothbuild.lang.base.Location.internal;
+import static org.smoothbuild.lang.base.type.TestingTypes.blob;
+import static org.smoothbuild.lang.base.type.TestingTypes.bool;
+import static org.smoothbuild.lang.base.type.TestingTypes.nothing;
+import static org.smoothbuild.lang.base.type.TestingTypes.person;
+import static org.smoothbuild.lang.base.type.TestingTypes.string;
+import static org.smoothbuild.lang.base.type.Types.array;
 import static org.smoothbuild.testing.common.AssertCall.assertCall;
 import static org.smoothbuild.util.Strings.unlines;
 
@@ -10,20 +16,13 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
-import org.smoothbuild.lang.object.type.ConcreteType;
-import org.smoothbuild.testing.TestingContext;
+import org.smoothbuild.lang.base.type.ConcreteType;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.testing.EqualsTester;
 
-public class ItemInfoTest extends TestingContext {
+public class ItemInfoTest {
   private final String name = "name";
   private ItemInfo itemInfo;
-  private final ConcreteType bool = boolType();
-  private final ConcreteType string = stringType();
-  private final ConcreteType blob = blobType();
-  private final ConcreteType nothing = nothingType();
-  private final ConcreteType type = string;
 
   @Test
   public void null_type_is_forbidden() {
@@ -33,20 +32,20 @@ public class ItemInfoTest extends TestingContext {
 
   @Test
   public void null_name_is_forbidden() {
-    assertCall(() -> new ItemInfo(0, type, null, true, internal()))
+    assertCall(() -> new ItemInfo(0, string, null, true, internal()))
         .throwsException(NullPointerException.class);
   }
 
   @Test
   public void type_getter() {
-    itemInfo = new ItemInfo(0, type, name, true, internal());
+    itemInfo = new ItemInfo(0, string, name, true, internal());
     assertThat(itemInfo.type())
-        .isEqualTo(type);
+        .isEqualTo(string);
   }
 
   @Test
   public void name_getter() {
-    itemInfo = new ItemInfo(0, type, name, true, internal());
+    itemInfo = new ItemInfo(0, string, name, true, internal());
     assertThat(itemInfo.name())
         .isEqualTo(name);
   }
@@ -58,8 +57,7 @@ public class ItemInfoTest extends TestingContext {
         new ItemInfo(0, string, "equal", true, internal()),
         new ItemInfo(0, string, "equal", true, commandLineLocation()),
         new ItemInfo(1, string, "equal", true, internal()));
-    for (ConcreteType type :
-        ImmutableList.of(bool, string, arrayType(string), blob, nothing, personType())) {
+    for (ConcreteType type : List.of(bool, string, array(string), blob, nothing, person)) {
       tester.addEqualityGroup(
           new ItemInfo(0, type, name, true, internal()),
           new ItemInfo(1, type, name, true, internal()));
@@ -96,7 +94,7 @@ public class ItemInfoTest extends TestingContext {
     List<ItemInfo> names = new ArrayList<>();
     names.add(new ItemInfo(0, string, "param1", true, internal()));
     names.add(new ItemInfo(0, string, "param2-with-very-long", true, internal()));
-    names.add(new ItemInfo(0, arrayType(blob), "param3", true, internal()));
+    names.add(new ItemInfo(0, array(blob), "param3", true, internal()));
 
     assertThat(ItemInfo.iterableToString(names))
         .isEqualTo(unlines(
